guess i didn't squash the bug, more moved it to another room

--- a/src/assets/scss/_positioning.scss
+++ b/src/assets/scss/_positioning.scss
@@ -26,7 +26,3 @@
 .space-around {
     justify-content: space-around;
 }
-
-.text-center {
-    text-align: center;
-}
