--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -23,8 +23,4 @@
     font-size: 1.2rem;
 }
 
-.text-large {
-    font-size: 1.2rem;
-}
-
 /** General End */
